# pharma_research

./: .gitignore  .replit  AGENT_INTEGRATION.md  README.md  fix_db.py  fix_schema.sql  main.py  pyproject.toml  replit.md  requirements.txt  test_agent_import.py  update_schema.py
agents/: .dockerignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  docker-helper.bat  docker-helper.sh  pyproject.toml  report.md  test_patents_view.py  test_patentsview.py
agents/data/: IHME-GBD_2023_DATA-a12daa50-1.csv  medicines_output_medicines_en.xlsx  medicines_output_shortages_en.xlsx
agents/data/drug_mechanism_of_action/: part-00000-bcd725a7-a061-4bcf-bcab-271f0e87cdac-c000.snappy.parquet
agents/docs/: API_Tools_Usage_Guide.md  Agent_Quality_Fix_Summary.md  ChEMBL_Tool_Examples.md  ChEMBL_Tool_Summary.md  Code_Review_Bug_Report.md  EXIMTool_Guide.md  Enhanced_Tools_Summary.md  Final_Report_Fix_Guide.md  OpenTargetsDrugIndication_Tool_Examples.md  OpenTargetsDrugIndication_Tool_Summary.md  OpenTargets_Tool_Examples.md  OpenTargets_Tool_Summary.md  PatentsView_Tool_Examples.md  PatentsView_Tool_Summary.md  Runtime_Bugs_Fixed.md  URGENT_Placeholder_Fix.md  first_report.md
agents/output/: clinical_trials.md  exim_trade_analysis.md  final_report.md  internal_knowledge.md  market_insights.md  patent_landscape.md  web_intelligence.md
agents/src/pharma_researcher/: crew.py  main.py  schemas.py
agents/src/pharma_researcher/config/: agents.yaml  tasks.yaml
agents/src/pharma_researcher/tools/: ChEMBLTool.py  ClinicalTrialsTool.py  EMAMedicineShortagesTool.py  (+11 more)
(+43 files in other folders)
