[project]
name = "pharma_researcher"
version = "0.1.0"
description = "pharma_researcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,openai,tools]==1.4.1",
    "pandas>=2.3.3",
]

[project.scripts]
pharma_researcher = "pharma_researcher.main:run"
run_crew = "pharma_researcher.main:run"
train = "pharma_researcher.main:train"
replay = "pharma_researcher.main:replay"
test = "pharma_researcher.main:test"
run_with_trigger = "pharma_researcher.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
